<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/testLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/your_picture"
                android:focusable="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_backgrond"
                android:src="@drawable/dummy_profile_image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/profile"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_corners_input"
                android:drawableStart="@drawable/gender"
                android:drawablePadding="16dp"
                android:focusable="false"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/profile_gender"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/profile_ic_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners_input"
                android:drawableStart="@drawable/name_as_ic"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/ic_number"
                android:inputType="number"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:focusable="false"/>

            <EditText
                android:id="@+id/profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners_input"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/profile_phone_number"
                android:inputType="phone"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/certificate">
                    </ImageView>

                    <TextView
                        android:id="@+id/profile_certificate_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/profile_certificate"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/profile_certificate_title_divider"
                    android:layout_width="130dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:background="#E2E2E2" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/baseline_done_24">-->
<!--                    </ImageView>-->

                    <ListView
                        android:id="@+id/certView"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp" />
                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_corners_input"
                    android:drawableStart="@drawable/bio"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/profile_bio"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    android:singleLine="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginTop="24dp"/>

                <EditText
                    android:id="@+id/profile_highest_qualifications"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_corners_input"
                    android:drawableStart="@drawable/qualifications"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/highest_qualifications"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:layout_marginTop="24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="80dp">

                <Button
                    android:id="@+id/profile_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/profile_save"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</ScrollView>
