<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_percent="0.35"
        app:srcCompat="@drawable/done" />

    <TextView
        android:id="@+id/success_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/create_successful"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/success_icon"
        app:layout_constraintStart_toStartOf="@+id/success_icon"
        app:layout_constraintTop_toBottomOf="@+id/success_icon" />

    <TextView
        android:id="@+id/success_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_regular"
        android:textSize="16sp"
        android:text="@string/create_successful_caption"
        app:layout_constraintEnd_toEndOf="@+id/success_headline"
        app:layout_constraintStart_toStartOf="@+id/success_headline"
        app:layout_constraintTop_toBottomOf="@+id/success_headline" />

    <Button
        android:id="@+id/success_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/success_icon"
        app:layout_constraintStart_toStartOf="@+id/success_icon"
        app:layout_constraintTop_toBottomOf="@+id/success_caption"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>